<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.com.faculdade.CadastroDisciplina"
    android:orientation="vertical">

    <TextView
        android:text="@string/nome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_disciplina" />

    <TextView
        android:text="@string/periodo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_periodo" />

    <TextView
        android:text="@string/primeira_prova"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_primeira_prova" />

    <TextView
        android:text="@string/segunda_prova"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_segunda_prova" />

    <TextView
        android:text="@string/primeiro_trabalho"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_primeiro_trabalho" />

    <TextView
        android:text="@string/segundo_trabalho"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_segundo_trabalho" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="160dp"
            android:layout_margin="5dp"
            android:text="@string/salvar"
            android:id="@+id/btn_salvar"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="160dp"
            android:layout_margin="5dp"
            android:id="@+id/btn_cancelar"
            android:text="@string/cancelar" />

    </LinearLayout>


</LinearLayout>
